# Scrybe

./: .gitignore  README.md  pyproject.toml
src/scrybe/: __main__.py  codebuilder.py  filestate.py  logger.py  projectbuilder.py  scriptbuilder.py  translations.py  types.py  utils.py
src/scrybe/builder/: __init__.py  codebuilder.py  projectbuilder.py  scriptbuilder.py  setupbuilder.py
src/scrybe/scriptparser/: lexer.py  parser.py
src/scrybe/setupparser/: lexer.py  parser.py
